--- a/app/src/main/res/layout/index_layout.xml
+++ b/app/src/main/res/layout/index_layout.xml
@@ -87,4 +87,6 @@
             android:textSize="24dp"
             android:text="退出"
     />
+    <ScrollView android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
 </LinearLayout>
