--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,27 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="text_margin">16dp</dimen>
     <dimen name="titleHeight">50dp</dimen>
+
+
+
+
+
+
+
+
+
+
+
+
+    <dimen name="activity_register_address_font">20dp</dimen>
+    <dimen name="activity_register_tag_font">13dp</dimen>
+    <dimen name="activity_register_content_font">17dp</dimen>
+    <dimen name="activity_post_address_font">20dp</dimen>
+    <dimen name="activity_post_tag_font">13dp</dimen>
+    <dimen name="activity_post_content_font">17dp</dimen>
+    <dimen name="activity_createpost_address_font">20dp</dimen>
+    <dimen name="activity_createpost_tag_font">17dp</dimen>
+    <dimen name="activity_createpost_content_font">17dp</dimen>
+    <dimen name="activity_info_left_margin">30dp</dimen>
+    <dimen name="activity_info_top_margin">20dp</dimen>
 </resources>
