--- a/app/src/main/res/layout/sign_in_layout.xml
+++ b/app/src/main/res/layout/sign_in_layout.xml
@@ -19,6 +19,7 @@
                 android:id="@+id/signIn_backArrow"
                 android:src="@drawable/back_arrow_image"
                 android:adjustViewBounds="true"
+                android:clickable="true"
                 android:layout_marginLeft="10dp"
                 android:layout_width="wrap_content"
                 android:layout_height="20dp" />
@@ -97,6 +98,7 @@
                     android:text="注册"
                     android:textSize="21sp"
                     android:textColor="#538bc7"
+                    android:clickable="true"
                     android:layout_marginLeft="10dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
