这次大更新

--- a/app/src/main/res/layout/help_fragment_layout.xml
+++ b/app/src/main/res/layout/help_fragment_layout.xml
@@ -3,8 +3,13 @@
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
-<TextView android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:text="help"
-          android:textSize="60dp"/>
+    <com.amap.api.maps.MapView
+            android:id="@+id/map"
+            android:layout_width="match_parent"
+            android:layout_height="300dp"/>
+
+    <GridView android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:numColumns="2">
+    </GridView>
 </LinearLayout>
