--- a/app/src/main/res/layout/index_activity_layout.xml
+++ b/app/src/main/res/layout/index_activity_layout.xml
@@ -16,8 +16,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:orientation="horizontal"
-                  >
+            android:orientation="horizontal">
     <Button android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="20dp"
